# 3d-asteroids

./: .gitignore  CMakeLists.txt  Collidable.cpp  Collidable.h  CollidableObject.cpp  CollidableObject.h  Defines.h  Object.cpp  Object.h  ObjectSpawner.cpp  ObjectSpawner.h  README.md  Ship.cpp  Ship.h  TextureManager.cpp  TextureManager.h  main.cpp  tga.cpp
3d-asteroids/: 3d-asteroids.sln  3d-asteroids.vcxproj  3d-asteroids.vcxproj.filters
BaseObjects/: CameraObject.cpp  CameraObject.h  Collidable.h  CollidableObject.cpp  CollidableObject.h  KinematicObject.cpp  KinematicObject.h  Object.cpp  Object.h  RenderObject.cpp  RenderObject.h  SpatialObject.cpp  SpatialObject.h
Util/: GeometryPrimitives.h  ModelManager.cpp  ModelManager.h  OBJ_Loader.h  RandomRange.h  TextureManager.cpp  TextureManager.h  tga.cpp  tga.h
resources/: asteroid.tga  asteroid1.tga  asteroid128.tga  asteroid16.tga  asteroid2.tga  asteroid256.tga  asteroid32.tga  asteroid4.tga  asteroid512.tga  asteroid64.tga  asteroid8.tga  asteroid_transp.tga  cockpit.tga  earth.tga  emerald.tga  emerald_test.tga  porcelain.tga  sun.tga
